added a list in index file

--- a/html/index.html
+++ b/html/index.html
@@ -1,2 +1,20 @@
-<h1>i'am learning git</h1>
-<p>i;m</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/index.css">
+    <title>home</title>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li>home</li>
+            <li>about</li>
+            <li>services</li>
+            <li>product</li>
+            <li>help</li>
+        </ul>
+    </nav>
+</body>
+</html>
