--- a/html/index.html
+++ b/html/index.html
@@ -18,5 +18,8 @@
             <li>help</li>
         </ul>
     </nav>
+    <div class="box">
+        <h1>car</h1>
+        <img src="../images/th.jpeg" alt=""></div>
 </body>
 </html>
